// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly the component 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="d-flex justify-content-end"
    >
      <button
        class="me-3 btn btn-primary"
        data-testid="menu-unlogged-btn"
        type="button"
      >
        layoutHeader.signUpBtn
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Header /> renders logged menu header when is logged 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="d-flex justify-content-end"
    >
      <button
        class="me-3 btn btn-primary"
        data-testid="menu-logged-logout-btn"
        type="button"
      >
        layoutHeader.logout
      </button>
    </div>
  </div>
</DocumentFragment>
`;
